PrimaryMonitor again an a try-catch for illegalArgumentException (should be fixed)